# golink

./: .gitignore  BUILD  LICENSE  README.md  WORKSPACE  copy_into_workspace.sh  golink.bzl
bazel/go/: def.bzl  repos.bzl
gazelle/go_link/: BUILD.bazel  proto_gen.go
proto/: BUILD  proto.bzl
